--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "Paul Frazee <pfrazee@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "diff-file-tree": "^2.3.2",
     "hyperdrive": "^9.16.0",
-    "mirror-folder": "^3.1.0",
     "pauls-dat-api": "^8.1.0",
     "random-access-file": "^2.0.1",
     "random-access-indexed-file": "^2.0.0",
